required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (SVN Trunk):
---------------------------

- Added summary of options at end of configure output (#1966)

- Updated configure script to detect and require GEOS 2.2.2+ (#1896)

- Renamed --enable-coverage configure option to --enable-gcov to avoid
  confusion with WCS or Arc/Info coverages (#2217)

- Fixed --enable-gcov (formerly --enable-coverage) option to work with 
  php_mapscript.so (#2216)


Version 5.0.0-beta3 (2007-08-08)
--------------------------------

Known issues: 

- This beta contains significant improvements and fixes on the AGG 
  rendering front. However some build issues remain on some platforms.
  Please see ticket #2215 if building with AGG support doesn't work with 
  the default configure script: http://trac.osgeo.org/mapserver/ticket/2215

Bug fixes:

- mapagg.cpp rewrite - the AGG renderer should now support all the GD features

- Use AGG when requested for drawing the legend

- Fixed problems with very large HTML legends producing no output (#1946)

- Use OGR-specific destructors for objects that have them rather than
  'delete' (#697)

- Include style-related info in HTML legend icon filenames to solve issues with
  caching of icons when the class or style params are changed (#745)

- Fixed issues with wms_layer_group metadata in WMS GetCapabilities (#2122)

- Use msSaveImageBufferAGG for AGG formats in getBytes (#2205).

- Make sure to emit $(AGG) to mapscriptvars because of conditional inclusion
  of stuct members to imageObj. (#2205)

- Make imageextra field in imageObj not conditional (not #ifdef'ed) (#2205)

- AGG/PNG and AGG/JPEG are the only valid agg drivers.