@@ -12,6 +12,10 @@ For a complete change history, please see the Subversion log comments.
 
 Current Version (SVN Trunk):
 ---------------------------
+- Added truetype symbolization for lines and polygons
+
+- Draw an outline of size 1 of the fill color around polygons if an
+  outlinecolor isn't specified (avoids faint outline) 
 
 - Added summary of options at end of configure output (#1966)
 
